--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
     "sanity": "^3.14.1",
+    "sanity-plugin-mux-input": "^2.1.1",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
